WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121292
[CTTE] RenderMultiColumnBlock is never anonymous.
https://bugs.webkit.org/show_bug.cgi?id=121292
Summary
[CTTE] RenderMultiColumnBlock is never anonymous.
Andreas Kling
Reported
2013-09-13 04:43:51 PDT
[CTTE] RenderMultiColumnBlock is never anonymous.
Attachments
Patch
(2.86 KB, patch)
2013-09-13 04:44 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-09-13 04:44:24 PDT
Created
attachment 211537
[details]
Patch
Andreas Kling
Comment 2
2013-09-13 05:20:14 PDT
Comment on
attachment 211537
[details]
Patch Clearing flags on attachment: 211537 Committed
r155688
: <
http://trac.webkit.org/changeset/155688
>
Andreas Kling
Comment 3
2013-09-13 05:20:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug