Source/WebCore/rendering/RenderObject.cpp
@@ -206,7 +206,7 @@ RenderObject* RenderObject::createObject(Element* element, RenderStyle* style)
     case RUN_IN:
     case COMPACT:
         if ((!style->hasAutoColumnCount() || !style->hasAutoColumnWidth()) && document.regionBasedColumnsEnabled())
-            return new (arena) RenderMultiColumnBlock(element);
+            return new (arena) RenderMultiColumnBlock(*element);
         return new (arena) RenderBlockFlow(element);
     case LIST_ITEM:
         return new (arena) RenderListItem(*element);
